# lose-it

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  coverage.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: amount-flag-spec.md  backup-impl-plan.md  backup-spec.md  food-id-flow-spec.md  regenerate-parser-schemas.md  serving-unit-spec.md
skills/log-food/: SKILL.md
src/lose_it/: __init__.py  cli.py  client.py  enums.py  models.py  trash.py
src/lose_it/backup/: __init__.py  _discovery.py  _fetch.py  _fs.py  _orchestrator.py  _upsert.py
src/lose_it/client/: __init__.py  _client.py  _decoder.py  _enums.py  _formatters.py  _gwt.py  _login_flow.py  _models.py  _portion.py  _units.py  daily.py  entries.py  foods.py  init.py
src/lose_it/core/: __init__.py  _config.py  _dates.py  _decoder.py  _enums.py  _formatters.py  _http.py  _login_flow.py  _portion.py  _schemas.json  _settings.py  auth.py  daily.py  entries.py  foods.py  init.py
src/lose_it_utils/: __init__.py  _debug_cli.py  _logging.py  cli.py
src/lose_it_utils/client/: __init__.py  _config.py  _dates.py  _decoder.py  _enums.py  _gwt.py  _http.py  _ids.py  _models.py  _schemas.json  _settings.py  _units.py  auth.py  daily.py  entries.py  foods.py  init.py
tests/: _sanitize.py  conftest.py
tests/conformance/: test_auth_helpers.py  test_backup_discovery.py  test_backup_fetch.py  test_backup_fs.py  test_backup_orchestrator.py  test_backup_restore_safe.py  test_backup_upsert.py  test_cli.py  test_cli_backup.py  test_cli_check_token_and_profiles.py  test_cli_toon.py  test_cli_trash.py  test_cross_class_conversion.py  test_daily.py  test_daily_range.py  test_decoder_hashmap.py  test_entries.py  test_entries_serving_unit.py  test_enums.py  test_food_log_entry_timestamps.py  test_foods.py  test_get_food.py  test_gwt.py  test_ids.py  test_init_day_key_fallback.py  test_login_writes_config.py  test_settings.py  test_timestamp_and_day_key.py  test_trash.py  test_units.py  test_version.py
tests/conformance/fixtures/: delete_food_log_entry_success.txt  get_daily_details_after_delete.txt  get_daily_details_for_date_range_request.txt  get_daily_details_for_date_range_response.txt  get_daily_details_with_tortilla.txt  get_daily_details_with_user_saved_food.txt  get_food_null_name.txt  get_initialization_data.txt  get_unsaved_tortilla.txt  search_foods_tortilla.txt  search_foods_with_user_saved.txt  update_food_log_entry_success.txt
tests/functional/: test_config_layering.py  test_crud.py  test_dry_run.py  test_login.py  test_readme_example.py
tools/: extract_gwt_schemas.py
tools/agent-sandbox/: Dockerfile  README.md  agent.py
